--- a/Siimple/travelweb1/index.html
+++ b/Siimple/travelweb1/index.html
@@ -116,8 +116,8 @@
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
                         <h2 class="">AVAILABLE LANDS</h2>
-                        <p>Himachal Pradesh is a northern Indian state in the Himalayas. It's home to scenic mountain towns and resorts such as Dalhousie. Host to the Dalai Lama, Himachal Pradesh has a strong Tibetan presence. This is reflected in its Buddhist temples and monasteries, as well as its vibrant Tibetan New Year celebrations. The region is also well known for its trekking, climbing and skiing areas.
-</p>
+                        <p style="font-size: 18px;">Here are the lands available for rent now. We will help you choose the best. Further details of the land are given below. Contact the 
+                            land owner directly. Contact us for any assistance.</p>
                         <a href="#tm-section-3" class="text-uppercase tm-btn tm-btn-white tm-btn-white-primary">Choose your land</a>
                     </div>
                 </section> <BR>
@@ -144,7 +144,7 @@
 
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
                         <h2 class="">SERVICES</h2>
-                        <p>Kerala, a state on India's tropical Malabar Coast, has nearly 600km of Arabian Sea shoreline. It's known for its palm-lined beaches and backwaters, a network of canals. Inland are the Western Ghats, mountains whose slopes support tea, coffee and spice plantations as well as wildlife. National parks like Eravikulam and Periyar, plus Wayanad and other sanctuaries, are home to elephants, langur monkeys and tigers</p>
+                        <p style="font-size: 18px;">We provide a customer care service for the farmers which will help them to get vehicles, machines, fertilizers and other materials for rent. Contact us for any assistance.</p>
                         <a href="#why-us" class="text-uppercase tm-btn tm-btn-white tm-btn-white-highlight">SERVICES FOR YOU</a>
                     </div>
             </div><BR><BR>
@@ -154,9 +154,9 @@
                             <div class="tm-recommended-place">
                                 <img src="img/land1.jpg" alt="Image" class="img-fluid tm-recommended-img">
                                 <div class="tm-recommended-description-box">
-                                    <h3 class="tm-recommended-title">SOUTH RESORT HOTEL</h3>
-                                    <p class="tm-text-highlight">South Himachal</p>
-                                    <p class="tm-text-gray">Courteous treatment will make a customer a walking advertisement...</p>
+                                    <h3 class="tm-recommended-title">KOTHAMANGALAM</h3>
+                                    <p class="tm-text-highlight">Thrikkariyoor P.O</p>
+                                    <p class="tm-text-gray">Contact : **********</p>
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
                                     <p class="tm-recommended-price">INR 3000</p>
@@ -167,9 +167,9 @@
                             <div class="tm-recommended-place">
                                 <img src="img/land2.jpg" alt="Image" class="img-fluid tm-recommended-img">
                                 <div class="tm-recommended-description-box">
-                                    <h3 class="tm-recommended-title">SNOW VALLEY RESORT</h3>
-                                    <p class="tm-text-highlight">South Himachal</p>
-                                    <p class="tm-text-gray">Hospitality exists when you believe the other person is on your side...</p>
+                                    <h3 class="tm-recommended-title">ALUVA</h3>
+                                    <p class="tm-text-highlight">Sreemoolanagaram P.O</p>
+                                    <p class="tm-text-gray">Contact : **********</p>
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
                                     <p class="tm-recommended-price">INR 5999</p>
@@ -180,9 +180,9 @@
                             <div class="tm-recommended-place">
                                 <img src="img/land3.jpg" alt="Image" class="img-fluid tm-recommended-img">
                                 <div class="tm-recommended-description-box">
-                                    <h3 class="tm-recommended-title">GALLE HILL RESORT</h3>
-                                    <p class="tm-text-highlight">Mashobra</p>
-                                    <p class="tm-text-gray">Hospitality is simply an opportunity to show love and care...</p>
+                                    <h3 class="tm-recommended-title">PERUMBAVOOR</h3>
+                                    <p class="tm-text-highlight">Pattimattom P.O</p>
+                                    <p class="tm-text-gray">Contact : **********</p>
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
                                     <p class="tm-recommended-price">INR 4300</p>
@@ -193,9 +193,9 @@
                             <div class="tm-recommended-place">
                                 <img src="img/toppic.jpg" alt="Image" class="img-fluid tm-recommended-img">
                                 <div class="tm-recommended-description-box">
-                                    <h3 class="tm-recommended-title">SUMIT LE ROYAL</h3>
-                                    <p class="tm-text-highlight">NORTH HIMACHAL</p>
-                                    <p class="tm-text-gray">Hospitality exists when you believe the other person is on your side...</p>
+                                    <h3 class="tm-recommended-title">PERUMBAVOOR</h3>
+                                    <p class="tm-text-highlight">Valayanchirangara P.O</p>
+                                    <p class="tm-text-gray">Contact : **********</p>
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
                                     <p class="tm-recommended-price">INR 800</p>
@@ -211,9 +211,9 @@
                             <div class="tm-recommended-place">
                                 <img src="img/land4.jpg" alt="Image" class="img-fluid tm-recommended-img">
                                 <div class="tm-recommended-description-box">
-                                    <h3 class="tm-recommended-title">GOA RESIDENCY IN</h3>
-                                    <p class="tm-text-highlight">panaji</p>
-                                    <p class="tm-text-gray">Hotel life is about the same in every latitude...</p>
+                                    <h3 class="tm-recommended-title">PERUMBAVOOR</h3>
+                                    <p class="tm-text-highlight">Allapra P.O</p>
+                                    <p class="tm-text-gray">Contact : **********</p>
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
                                     <p class="tm-recommended-price">INR  4500</p>
@@ -224,9 +224,9 @@
                             <div class="tm-recommended-place">
                                 <img src="img/land5.jpg" alt="Image" class="img-fluid tm-recommended-img">
                                 <div class="tm-recommended-description-box">
-                                    <h3 class="tm-recommended-title">TULIP RESIDENCY</h3>
-                                    <p class="tm-text-highlight">madgon</p>
-                                    <p class="tm-text-gray">No matter how nice a hotel is, it's not home...</p>
+                                    <h3 class="tm-recommended-title">KOLENCHERY</h3>
+                                    <p class="tm-text-highlight">Kunnathunad P.O</p>
+                                    <p class="tm-text-gray">Contact : **********</p>
                                 </div>
                                 <a href="#" class="tm-recommended-price-box">
                                     <p class="tm-recommended-price">inr 5678</p>
@@ -249,13 +249,13 @@
                             <div class="card">
                                 <img height="275px" width="275px" src="img/tractor.jpg" class="card-img-top" alt="...">
                                     <div class="card-icon">
-                                        <i class="fas fa-tractor"></i>
+                                        <i  onclick="location.href='../contactus.html'"></i>
                                     </div>
                                     <div class="card-body">
                                         <h5 class="card-title">
                                             <a href="">Machinery</a>
                                         </h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                                        <p class="card-text">We will provide you with the necessary machinery such as tractor, sprayes, field cultivators, shredders and cutters, Broadcast seeder etc..<br>Contact us for your needs.</p>
                                     </div>
                                 </div>
                             </div>
@@ -263,13 +263,13 @@
                                 <div class="card">
                                     <img height="275px" width="275px" src="img/Agricultural Tools.jpg" class="card-img-top" alt="...">
                                         <div class="card-icon">
-                                            <i class="bx bx-calendar-edit"></i>
+                                            <i onclick="location.href='../contactus.html'"></i>
                                         </div>
                                         <div class="card-body">
                                             <h5 class="card-title">
                                                 <a href="">Tools</a>
                                             </h5>
-                                            <p class="card-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
+                                            <p class="card-text">We will provide you with the necessary tools such as shovel, pickaxe, spade, rake, plough, sickle, etc..<br>Contact us for your needs.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -277,13 +277,13 @@
                                     <div class="card">
                                         <img height="275px" width="275px" src="img/biofertilizers.png" class="card-img-top" alt="...">
                                             <div class="card-icon">
-                                                <i class="bx bx-landscape"></i>
+                                                <i onclick="location.href='../contactus.html'"></i>
                                             </div>
                                             <div class="card-body">
                                                 <h5 class="card-title">
                                                     <a href="">Fertilizers</a>
                                                 </h5>
-                                                <p class="card-text">Nemo enim ipsam voluptatem quia voluptas sit aut odit aut fugit, sed quia magni dolores eos qui ratione voluptatem sequi nesciunt Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet. </p>
+                                                <p class="card-text">We will provide you with the necessary fertilizers such as compost, greensand, chicken manure, cow manure, seaweed, cotton seed meal etc..<br>Contact us for your needs.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -298,7 +298,7 @@
                         <span><b>Meenakshi Rajesh & Aparna Ajith</b></span>
                     </strong>. All Rights Reserved<br>
                     <a href="#"><i class="fa fa-phone">  9072960424</i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="#"><i class="fa fa-phone">  9072960424</i></a><br>
+                    <a href="#"><i class="fa fa-phone">  8129490416</i></a><br>
                     <a href="#"><i class="fa fa-facebook"></i></a> &nbsp;&nbsp;&nbsp;
                     <a href="#"><i class="fa fa-twitter"></i></a> &nbsp;&nbsp;&nbsp;
                     <a href="#"><i class="fa fa-linkedin"></i></a> &nbsp;&nbsp;&nbsp;
