--- a/Siimple/contactus.html
+++ b/Siimple/contactus.html
@@ -157,7 +157,7 @@
         <i class="fas fa-at"></i>
         <i class="fas fa-mail-bulk"></i>
       </div>
-      <form action="/">
+      <form action="get">
         <h1><B>Contact Us</B></h1>
         <div class="info">
           <input class="fname" type="text" name="name" placeholder="Full name">
@@ -193,7 +193,7 @@
               </div>
             </div>
          </div>
-        <center><button type="submit" href="/">Submit</button></center>
+        <center><button type="submit" href="#">Submit</button></center>
         <br><br>
         <center> <P><B>HELP DESK CONTACT NO: 9207592982</B></P></center>
 
